unpackaged/main/default/objects/Credit_Review_Bank_Summary__c/Credit_Review_Bank_Summary__c.object-meta.xml
<CustomObject>
    <label>Credit Review Bank Summary</label>
    <nameField>
        <displayFormat>CRBank-{0}</displayFormat>
        <label>Credit Review Bank Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Review Bank Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>