unpackaged/main/default/objects/Credit_Review_Bank_Summary__c/fields/Credit_Review__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review__c</fullName>
    <label>Credit Review</label>
    <referenceTo>Credit_Review__c</referenceTo>
    <relationshipLabel>Credit Review Bank Summaries</relationshipLabel>
    <relationshipName>Credit_Review_Bank_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>