unpackaged/main/default/objects/Credit_Review_Bank_Summary__c/fields/Dual_Bank_Acct_Last_Four__c.field-meta.xml
<CustomField>
    <fullName>Dual_Bank_Acct_Last_Four__c</fullName>
    <formula>RIGHT(Related_Bank_Data__r.Account_Number__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dual Bank Acct Last Four</label>
    <type>Text</type>
</CustomField>