unpackaged/main/default/objects/Credit_Review_Bank_Summary__c/fields/Max_NSF__c.field-meta.xml
<CustomField>
    <fullName>Max_NSF__c</fullName>
    <label>Max NSF</label>
    <summarizedField>Credit_Review_Monthly_Ledger__c.NSF__c</summarizedField>
    <summaryForeignKey>Credit_Review_Monthly_Ledger__c.Bank_Summary__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>