unpackaged/main/default/objects/Credit_Review_Bank_Summary__c/fields/Min_of_Average_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Min_of_Average_Daily_Balance__c</fullName>
    <label>Min of Average Daily Balance</label>
    <summarizedField>Credit_Review_Monthly_Ledger__c.Avg_Daily_Balance__c</summarizedField>
    <summaryForeignKey>Credit_Review_Monthly_Ledger__c.Bank_Summary__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>