unpackaged/main/default/objects/Credit_Review_Bank_Summary__c/fields/Number_of_Months_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months_Reviewed__c</fullName>
    <label>Number of Months Reviewed</label>
    <summaryFilterItems>
        <field>Credit_Review_Monthly_Ledger__c.Deposits_Number__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Review_Monthly_Ledger__c.Bank_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>