unpackaged/main/default/objects/Credit_Review_Bank_Summary__c/fields/Related_Bank_Data__c.field-meta.xml
<CustomField>
    <fullName>Related_Bank_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Bank Data</label>
    <referenceTo>Bank_Data__c</referenceTo>
    <relationshipLabel>Linked Credit Review Summaries</relationshipLabel>
    <relationshipName>Credit_Review_Bank_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>