unpackaged/main/default/objects/Credit_Review_Bank_Summary__c/fields/Sum_of_Negative_Days__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Negative_Days__c</fullName>
    <label>Sum of Negative Days</label>
    <summarizedField>Credit_Review_Monthly_Ledger__c.Negative_Days__c</summarizedField>
    <summaryForeignKey>Credit_Review_Monthly_Ledger__c.Bank_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>