unpackaged/main/default/objects/Credit_Review_Bank_Summary__c/fields/Tab_Label__c.field-meta.xml
<CustomField>
    <fullName>Tab_Label__c</fullName>
    <description>The Credit Review screen uses this formula to determine what to put as a label on the Bank Information tab.</description>
    <formula>Name</formula>
    <label>Tab Label</label>
    <type>Text</type>
</CustomField>